add: 階段の補正、直進歩行データの追加

--- a/metaquest_sensing/data/main.ipynb
+++ b/metaquest_sensing/data/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['oculus_walk', 'oculus_stairs', 'stairs']\n"
+      "['oculus_walk', 'five_steps', 'phone_straight_filter', 'phone_straight', 'oculus_stairs', 'oculus_straight', 'stairs']\n"
      ]
     }
    ],
@@ -27,13 +27,14 @@
     "# 同じディレクトリの中にあるディレクトリ名を取得\n",
     "dirs = os.listdir('./')\n",
     "dirs.remove('main.ipynb')\n",
-    "# dirs.remove('.DS_Store')\n",
+    "dirs.remove('csv_make.ipynb')\n",
+    "dirs.remove('.DS_Store')\n",
     "print(dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
