階段の様子を描画した

--- a/metaquest_sensing/data/main.ipynb
+++ b/metaquest_sensing/data/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['oculus_walk', 'five_steps', 'phone_straight_filter', 'phone_straight', 'oculus_stairs', 'oculus_straight', 'stairs']\n"
+      "['walk_kjlb', 'oculus_walk', 'five_steps', 'phone_straight_filter', 'phone_straight', 'oculus_stairs', 'oculus_straight', 'walk_kjlb_turn', 'stairs']\n"
      ]
     }
    ],
@@ -29,12 +29,13 @@
     "dirs.remove('main.ipynb')\n",
     "dirs.remove('csv_make.ipynb')\n",
     "dirs.remove('.DS_Store')\n",
+    "dirs.remove('memo.md')\n",
     "print(dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
