--- a/metaquest/walk&stairs/data/main.ipynb
+++ b/metaquest/walk&stairs/data/main.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['walk&stairs', 'oculus_stairs']\n"
+      "['walk_stairs', 'free_walk', 'oculus_stairs']\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
