add: 平面と立体の描画

--- a/metaquest/walk&stairs/data/csv_make.ipynb
+++ b/metaquest/walk&stairs/data/csv_make.ipynb
@@ -4,10 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accelerometer.csv is not found\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "file = \"phone_straight\"\n",
+    "file = \"walk_1209\"\n",
     "acceler_csv_file_name = 'Accelerometer'\n",
     "gyro_csv_file_name = 'Gyroscope'\n",
     "pressure_csv_file_name = 'Pressure'\n",
@@ -52,9 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accelerometer.csv is not found\n",
+      "Gyroscope.csv is not found\n",
+      "Pressure.csv is not found\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
