--- a/metaquest/walk&stairs/data/main.ipynb
+++ b/metaquest/walk&stairs/data/main.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['walk_stairs', 'free_walk', 'oculus_stairs']\n"
+      "['oculus_walk', 'walk_stairs', 'free_walk', 'oculus_stairs', 'walk_1209']\n"
      ]
     }
    ],
