--- a/metaquest/walk&stairs/data/main.ipynb
+++ b/metaquest/walk&stairs/data/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['oculus_walk', 'walk_stairs', 'free_walk', 'oculus_stairs', 'walk_1209']\n"
+      "['oculus_walk', '11_stairs', 'walk_stairs', 'nishi_stairs', 'free_walk', 'oculus_stairs', 'walk_1209', 'stair_down']\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
